--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         padding: 0;
       }
     </style>
-    <title>ADMIN UI</title>
+    <title>Riski Ramadhani Putradi</title>
   </head>
   <body>
     <div id="root"></div>
